--- a/src/ScrumBoardItBundle/Resources/views/base.html.twig
+++ b/src/ScrumBoardItBundle/Resources/views/base.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% form_theme form "ScrumBoardItBundle::fields.html.twig" %}
+{% form_theme form "ScrumBoardItBundle:Form:fields.html.twig" %}
 
 {% block title %}
     ScrumBoard-it
