--- a/src/ScrumBoardItBundle/Resources/views/Default/presentation.html.twig
+++ b/src/ScrumBoardItBundle/Resources/views/Default/presentation.html.twig
@@ -3,6 +3,7 @@
 {% block stylesheets %}
     {% stylesheets
         'bundles/scrumboardit/css/present.css'
+        'bundles/scrumboardit/css/bootstrap.min.css'
         'bundles/scrumboardit/css/style.css'
         'bundles/scrumboardit/css/jquery.contextMenu.css' filter='cssrewrite' %}
         <link rel="stylesheet" href="{{ asset_url }}" />
@@ -10,22 +11,13 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 {% endblock %}
 
-{% block javascripts %}
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    {% javascripts
-        '@ScrumBoardItBundle/Resources/public/js/bootstrap.min.js'
-        '@ScrumBoardItBundle/Resources/public/js/jquery.contextMenu.js' %}
-        <script type="text/javascript" src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-{% endblock %}
 {% block body %}
 <div class="container">
     <header>
        	<img src="{{ asset('bundles/scrumboardit/images/header.png') }}" />
        	<div class=log>
-       		Déjà un compte ?<br/>
-       		<a href="{{ path('login') }}">Se connecter</a>
+       		<a class="btn btn-default" href="{{ path('login') }}">Se connecter</a>
+       		<a class="btn btn-primary" href="{{ path('registration') }}">S'inscrire</a>
        	</div>
     </header>
     <section class="section group colored_section">
