Display log properties in home page

--- a/src/ScrumBoardItBundle/Resources/views/Default/index.html.twig
+++ b/src/ScrumBoardItBundle/Resources/views/Default/index.html.twig
@@ -14,8 +14,8 @@
         <div class="header">
             <img src="{{ asset('bundles/scrumboardit/images/header.png') }}" />
             <div class="log">
-               {# <img class="logImg" src="{{ asset(app.user.imgUrl) }}"/>
-                <span>{{ app.user.displayName }}</span><br /> #}
+               	<img class="logImg" src="{{ asset(app.user.imgUrl) }}"/>
+                <span>{{ app.user.displayName }}</span><br />
                 <a href="./logout">
                     <span class="glyphicon glyphicon-off">Déconnexion</span>
                 </a>
