--- a/src/ScrumBoardItBundle/Resources/views/Security/login.html.twig
+++ b/src/ScrumBoardItBundle/Resources/views/Security/login.html.twig
@@ -50,7 +50,7 @@
         <div class="text-center bottom">
             {% block bottom %}
                     Nouveau ici ? <a href="{{ path('discover') }}">Connectez-vous en tant que visiteur</a> <br/>
-                    Ou créez votre compte <a href="{{ path('registration') }}">ici.</a>
+                    Ou <a href="{{ path('registration') }}">Créez votre compte</a>.
             {% endblock %}
         </div>
     </div>
