EditProfile form type

--- a/src/ScrumBoardItBundle/Resources/views/Security/bugtracker.html.twig
+++ b/src/ScrumBoardItBundle/Resources/views/Security/bugtracker.html.twig
@@ -24,7 +24,7 @@
 				Connexion à Jira impossible : aucune URL n'est définie
 		    {% endif %}
 		</div>
-		<a href='#' class='btn btn-default btn-sm'>Editer l'url</a>
+		<a href="{{ path('edit_profile') }}" class='btn btn-default btn-sm'>Editer l'url</a>
     </div>
 {% endblock %}
 
