--- a/src/ScrumBoardItBundle/Resources/views/Security/registration.html.twig
+++ b/src/ScrumBoardItBundle/Resources/views/Security/registration.html.twig
@@ -8,6 +8,9 @@
     <div class="container">
         <div class="header">
             <img src="{{ asset('bundles/scrumboardit/images/header.png') }}" />
+			<div class="log">
+            	<a class="btn btn-danger" href="{{ path('index') }}">Retour</a>
+            </div>
         </div>
         <div class="page-header text-center">
             <h1>Inscription</h1>
